--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "*",
-        "admad/cakephp-jwt-auth": "1.0.x-dev"
+        "admad/cakephp-jwt-auth": "1.0.x-dev",
+        "snelg/cakephp-cors": "dev-master"
     },
     "require-dev": {
         "psy/psysh": "@stable",
